bynkc/tests/fixtures/positive/252_multi_file_commons_dotted_test/src/shipping/rates/make.bynk
commons shipping.rates {
  fn Rate.fromInt(n: Int) -> Result[Rate, ValidationError] {
    Rate.of(n)
  }
}
