bynkc/tests/fixtures/negative/362_generic_type_arg_count/input.bynk
commons bad

type Box[T] = { value: T }

fn f(b: Box[Int, String]) -> Int {
  0
}
